@@ -1,8 +1,10 @@
 --- v0.3 development series ---
 
+- More visual improvements.
 - Added a keyboard navigation mode. Use tab to jump from the message list to the
 individual messages in the conversation. Use the O key to open/close a given
 message. Use tab/shift-tab to move to next/previous message in the conversation.
+Use backspace to move back to the conversation view.
 - Added an "icons-only" mode for the buttons in the conversation view. This
 should make it easier for narrow screens to properly display the conversation
 title. Added native buttons on Linux, Mac and Windows.
